[package]
name = "quad-wasmnastics"
version = "0.1.0"
edition = "2018"
description = "Utilities that do the gymnastics required to make advanced Macroquad work on wasm."
repository = "https://github.com/gamma-delta/quad-wasmnastics"
license = "MIT"
keywords = ["gamedev", "wasm", "web", "miniquad"]
categories = ["game-development", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
base64 = "0.13.0"
flate2 = "1.0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = { git = "https://github.com/not-fl3/sapp-jsutils" }
serde = { version = "1.0.126", optional = true }
serde_json = { version = "1.0.64", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "3.0.2"
clipboard = "0.5.0"

[features]
serde_wrapper = ["serde", "serde_json"]
