[package]
name = "quad-wasmnastics"
version = "0.2.0"
edition = "2018"
description = "Utilities that do the gymnastics required to make advanced Macroquad work on wasm."
repository = "https://github.com/gamma-delta/quad-wasmnastics"
license = "MIT"
keywords = ["gamedev", "wasm", "web", "miniquad"]
categories = ["game-development", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
base64 = "0.13.0"
flate2 = "1.0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1.5"
serde = { version = "1.0.126", optional = true }
serde_json = { version = "1.0.64", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "3.0.2"
copypasta = "0.7.1"

[dev-dependencies]
macroquad = "0.3.5"
serde = "1.0.126"
serde_json = "1.0.64"

[features]
serde_wrapper = ["serde", "serde_json"]

[package.metadata.docs.rs]
all-features = true

